# Komachi-qq-aibot

./: .dockerignore  .env.example  .gitignore  README.md  open-llbot-webui.bat  open-napcat-webui.bat  pyproject.toml  restart_xiaomachi_runtime.ps1  start-xiaomachi-wsl.bat  start_xiaomachi.ps1  start_xiaomachi_bots.ps1  start_xiaomachi_runtime.ps1  status-xiaomachi-wsl.bat  stop-xiaomachi-wsl.bat  stop_xiaomachi.ps1  stop_xiaomachi_bots.ps1  stop_xiaomachi_runtime.ps1  关闭小町.bat  启动小町.bat
.trellis/: .template-hashes.json  .version  config.yaml  workflow.md
app/: config.py  dev_worker_main.py  group_main.py  main.py  private_main.py  private_reminders.py  public_release_sync.py  runtime_heartbeat.py
app/storage/: db.py  (+2 more)
configs/: groups.yaml  persona.yaml  private_reminders.yaml  safety.yaml
scripts/: backfill_memory_v2.py  backfill_summaries.py  backup_memory_v2.py  build_memory_eval_dataset.py  evaluate_memory_recall.py  import_history.py  install_service.ps1  probe_gpt_image2.py  run_memory_recall_eval.py  run_service.ps1  start_public_release_sync.ps1  stop_public_release_sync.ps1  sync_public_release.py  watch_public_release.ps1  xiaomachi_process_helpers.ps1  xiaomachi_watchdog.ps1
tests/: conftest.py  test_config.py  test_evaluate_memory_recall.py  test_llbot_deployment.py  test_memory_cli_gates.py  test_memory_eval_snapshot.py  test_memory_runtime_composition.py  test_onebot_probe.py  test_ops_manifest.py  test_private_reminders.py  test_probe_gpt_image2.py  test_process_split_smoke.py  test_public_release_sync.py  test_runtime_watchdog.py  test_scaffold.py  (+3 more)
(+160 files in other folders)
