[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qq-ai-bot"
version = "0.1.0"
description = "NapCat-based QQ AI bot with image generation and private admin repo control"
requires-python = ">=3.12"
dependencies = [
  "ddgs>=9.14.2",
  "httpx>=0.28.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "PyYAML>=6.0.2",
  "SQLAlchemy>=2.0.36",
  "sqlite-vec==0.1.9",
  "websockets>=13.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
norecursedirs = [
  "data",
  ".git",
  ".venv",
  "__pycache__",
  ".pytest_cache",
  ".pytest_tmp",
  ".worktrees",
  ".tmp*",
  ".tmp_pytest",
  ".tmp_pytest*",
  "tmp_*",
  "release",
  "scripts/public_release_assets",
]

[tool.setuptools.packages.find]
include = ["app*"]
namespaces = false
